--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -74,7 +74,7 @@
                                                             <p> </p>
 
                                                             <div class="update_button">
-                                                                <button id = "update_button" name = "update_button" type="submit">Finish Editing</button>
+                                                                <button id = "update_button" name = "update_button" type="submit" class="btn waves-effect waves-luluble-pink luluble-pink">Finish Editing</button>
                                                                 {{!-- <a id="add_button" class="btn waves-effect waves-light luluble-pink">Add Ingredient</a> --}}
                                                             </div>
                                                             <p> </p>
