--- a/views/inventory.hbs
+++ b/views/inventory.hbs
@@ -46,7 +46,7 @@
 
             <label>Classifier select</label>
             <select id="myDropdown" class="browser-default">
-                <option value="0" disabled selected>Choose your classifier</option>
+                <option value="0" disabled selected>Filter by classifier</option>
                 <option value="Thickener">Thickeners</option>
                 <option value="Oils">Oils</option>
                 <option value="Butters">Butters</option>
