--- a/views/formulas.hbs
+++ b/views/formulas.hbs
@@ -33,7 +33,7 @@
                 <div>
                     <h1>{{project_name}} Formulas </h1>
                     <p><b>Client:</b> {{this.client}}</p>
-                    <p><b>Number of Formulas:</b> 2</p>
+                    <p><b>Date:</b> {{this.date}}</p>
                 </div>
         {{/each}}
 
