edit ing update

--- a/views/inventory.hbs
+++ b/views/inventory.hbs
@@ -460,7 +460,7 @@
                                         {{!-- <b><span>Add a New Ingredient</span></b> --}}
                                         <h1 style="font-size:40px;">Edit Ingredient</h1>
 
-                                        <form method="POST" action="inventory/{{ingredient_id}}/inventoryingredientupdate">
+                                        <form method="POST" action="/inventory/{{ingredient_id}}/inventoryingredientupdate">
                                             <article class="regular">
                                                 {{!-- <h2>Textbook</h2> --}}
 
