project assign changes

--- a/public/partials/navbar.hbs
+++ b/public/partials/navbar.hbs
@@ -27,6 +27,7 @@
         <li><a href="/inventory"><i class="material-icons">book</i>Inventory</a></li>
         <li><a href="/projects"><i class="material-icons">import_contacts</i>Projects</a></li>
         <li><a href="/archive"><i class="material-icons">archive</i>Archive</a></li>
+        <li><a href="/project-assign"><i class="material-icons">assignment_ind</i>Assign</a></li>
         {{!-- <li><a href="#"><i class="material-icons">create</i>Other</a></li> --}}
     </ul>
 
