assign page admin access only

--- a/public/partials/navbar.hbs
+++ b/public/partials/navbar.hbs
@@ -27,7 +27,9 @@
         <li><a href="/inventory"><i class="material-icons">book</i>Inventory</a></li>
         <li><a href="/projects"><i class="material-icons">import_contacts</i>Projects</a></li>
         <li><a href="/archive"><i class="material-icons">archive</i>Archive</a></li>
-        <li><a href="/project-assign"><i class="material-icons">assignment_ind</i>Assign</a></li>
+        {{#if isAdmin}}
+            <li><a href="/project-assign"><i class="material-icons">assignment_ind</i>Assign</a></li>
+        {{/if}}
         {{!-- <li><a href="#"><i class="material-icons">create</i>Other</a></li> --}}
     </ul>
 
@@ -43,6 +45,22 @@
         <img src="/luluble_hlogo.jpg" class="responsive-img">
     </div> --}}
     {{!-- <span style="color:#000000" class="large material-icons">local_florist</span> --}}
+{{!-- 
+                if(isAuthenticated()) {
+                console.log("auth!!");
+                const element = document.getElementByID("mysidenav");
+                const x = document.create("li");
+                const a = document.create('a');
+                var link = document.createTextNode("Assign");
+                a.appendChild(link);
+                a.title = "Assign";
+                a.href = "/project-assign";
+                x.appendChild(a);
+                element.appendChild(x);
+            }
+            else {
+                console.log("NO");
+            } --}}
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
@@ -50,6 +68,8 @@
         document.addEventListener('DOMContentLoaded', function () {
             var side = document.querySelectorAll('.sidenav');
             M.Sidenav.init(side)
-        })
+
+            })
     </script>
+
 </div>
