new formulas page started

--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -32,7 +32,7 @@
                             <div class="card-content white-text">
                                 {{!-- projects/{{this.project_name}} --}}
                                 <span class="card-title"><a style="color: black;"
-                                        href="/projects/{{project_id}}/trial1/trial1"><b>{{project_name}}</a></b></span>
+                                        href="/projects/{{project_id}}"><b>{{project_name}}</a></b></span>
                                 <p style="color: black;">Client: {{client}}</p>
                                 <p style="color: black;">{{date}}</p>
                                 <div class="col s12">&nbsp;</div>
