--- a/views/formulas.hbs
+++ b/views/formulas.hbs
@@ -103,33 +103,30 @@
             })
         </script>
 
-    <div class="row">
-                <div style="overflow-x: scroll;">
+
+            <div class="row">
+                <div style="overflow-x: scroll;" class = "col s12 m4 l6">
                     <table class="scrollable">
                         <tr>
                             <th>Phase</th>
                             <th>Ingredient</th>
                             <th>INCI</th>
                             <th style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">Lot Number</th>
-                            {{#each trials}}
-                                <th>TRIAL {{trial_num}}</th>
-                                <th style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">% of Ingredient</th>
-                                <th style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">Total Amt of Ing</th>
-                            {{/each}}
+                            
                             </tr>
-                        {{#each trialData1}}
+                        {{!-- {{#each trialData1}}
                             <p>Batch date: {{batch_date}}</p>
                             <p>Formulator: {{formulator}}</p>
                         {{/each}}
                         {{#each trial_data1}}
                             <p>Total Amt of Formula: {{s}}</p>
                             <p class = "totalPercent">WARNING: Total Percentage = {{percent}}</p>
-                        {{/each}}
-                            <a href = "/projects/{{project_id}}/procedure{{trial_num1}}">Procedure</a>
+                        {{/each}} --}}
+                            <a href = "/projects/{{project_id}}/procedure">Procedure</a>
                         
 
 
-                        {{#each formula_ingredient_data1}}
+                        {{#each results}}
                             <tr>
                                 <td>{{phase}}</td>
                                 <td>{{trade_name}}</td>
@@ -138,8 +135,8 @@
                                 {{#each trials}}
                                     {{!-- get these values for each trial number (if ingredient id does not exist in that trial
                                     then put 0). Write a function for this --}}
-                                    <td>{{percent_of_ingredient}}</td>
-                                    <td>{{total_amount}}</td>
+                                    {{!-- <td>{{percent_of_ingredient}}</td>
+                                    <td>{{total_amount}}</td> --}}
                                 {{/each}}
                             </tr>
                         {{/each}}
@@ -155,10 +152,13 @@
 
                                 {{!-- somehow get the formula of the tab clicked on --}}
                                 
-                                <form method="POST" action="/projects/{{project_id}}/{{#each trialData1}}{{formula_id}}{{/each}}/phaseformsubmit">
+                                {{!-- {{#each trialData1}}{{formula_id}}{{/each}} --}}
+                                <form method="POST" action="/projects/{{project_id}}/phaseformsubmit">
                                 
                                     <article class="regular">
-                                        {{!-- <h2>Textbook</h2> --}}
+                                        <b><label for="tuluble">Trial:</label></b>
+                                        <input type="number" name = "userInput0" id="userInput0" placeholder="Enter Trial Number" maxlength="20">
+                                        <p> </p>
 
                                         {{!-- Field 1 --}}
                                         <b><label for="tuluble">Phase:</label></b>
@@ -196,6 +196,21 @@
                         </div>
                         </div>
                     </td>
+
+                    <script>
+                        $(document).ready(function() {
+                            $("#add_trial_button").click(function() {
+                            var inputValue0 = $("#userInput0").val();
+                            var inputValue1 = $("#userInput1").val();
+                            var inputValue2 = $("#userInput2").val();
+                            var inputValue3 = $("#userInput3").val();
+                            var inputValue4 = $("#userInput4").val();
+
+                            window.location.href += "/phaseformsubmit";
+                            //$(window).attr("location", "inventoryformsubmit/" + inputValue1);
+                            });
+                        });
+                    </script>
                     
                     <td>
                         <div class="col s12 m4 l2">
@@ -236,6 +251,32 @@
                     </td>
 
                     </table>
+                    </div>
+
+                        <div style="overflow-x: scroll;" class = "col s12 m4 l6">
+                        <table class = "scrollable">
+                            <tr>
+                                {{#each trial_data}}
+                                    <th colspan = "2" style = "text-align: center">TRIAL {{trial_num}}</th>
+                                {{/each}}
+                            </tr>
+                            <tr>
+                                {{#each trial_data}}
+                                    <th style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">% of Ingredient</th>
+                                    <th style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">Total Amt of Ing</th>
+                                {{/each}}
+                            </tr>
+                                    {{#each results}}
+                                        <tr>
+                                            <td>t{{total_amount}}</td>
+                                            <td>p{{percent_of_ingredient}}</td>
+                                        </tr>
+                                    {{/each}}
+                        </table>
+                        </div>
+                    </div>
+
+                    
                 </div>
             </div>
 
