--- a/views/project_assign.hbs
+++ b/views/project_assign.hbs
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="stylesheet" href="/styles/projects.css">
         <link rel="stylesheet" href="/partials/color.css">
-        <script type="text/javascript" src="/routes/projects.js"></script>
+        <script src="app.js"></script>
 
     </head>
 
@@ -24,28 +24,32 @@
 
                     <h1>Project Assign </h1>
 
-            {{#each results}}
+            {{#each scientistDict}}
+            <p>Project {{@key}}</p>
+                {{#each this}}
+                    <p>{{this.name}}</p>
+                {{/each}}
             <div class="row">
                 <div class="col s7 m6 l6">
                     {{!-- <a href="#terms" class="modal-trigger"> --}}
                         <div class="card luluble-light-pink darken-1">
                             <div class="card-content white-text">
                                 {{!-- projects/{{this.project_name}} --}}
-                                <span class="card-title"><a style="color: black;"
-                                        href="/projects/{{project_id}}/trial1/trial1"><b>{{project_name}}</a></b></span>
-                                <p style="color: black;">Client: {{client}}</p>
-                                <p style="color: black;">{{date}}</p>
+                                {{!-- <span class="card-title"><a style="color: black;" 
+                                        href="/projects/{{project_id}}/trial1/trial1"><b>{{project_name}}</a></b></span> --}}
+                                {{!-- <p style="color: black;">Client: {{client}}</p> --}}
+                                {{!-- <p style="color: black;">{{date}}</p> --}}
+
                                 <div class="col s12">&nbsp;</div>
                                 <div class="row">
                                     <div class = "col s12 m4 l4">
-                                        <a href="#term{{project_id}}" class="modal-trigger">
+                                        <a href="#term{{@key}}" class="modal-trigger">
                                             <span class="btn-small luluble-light-grey">See More</span>
                                         </a>
                                     </div>
                                     <div class = "col s10 m4 l7">
                                         <div class="chips">
                                             {{!-- <i class="material-icons close">close</i> --}}
-                                        </div>
                                         </div>
                                     </div>
                                 </div>
@@ -54,6 +58,7 @@
                 </div>
                 {{!-- </a> --}}
             {{/each}}
+            
             {{#each results}}
                 <div class="modal" id="term{{project_id}}">
                     <div class="row">
@@ -94,20 +99,13 @@
             {{/each}}
 
             <script>
-                $(document).ready(function() {
-                    $("#update_button").click(function() {
-
-                    const inputValueU1 = $("#userInputU1").val();
-                    const inputValueU2 = $("#userInputU2").val();
-                    const inputValueU3 = $("#userInputU3").val();
-
-                    window.location += "projectupdate";
-                    //$(window).attr("location", "inventoryformsubmit/" + inputValue1);
-                    });
-                });
+                console.log("TEST TEST");
+                console.log(scientistDict);
             </script>
 
-            <script>
+        
+
+            {{!-- <script> 
                 document.addEventListener('DOMContentLoaded', function(){
                     var mychips=document.querySelectorAll('.chips');
                     var scientists_json = JSON.stringify(scientists);
@@ -125,7 +123,7 @@
                         autocompleteOptions:{data:{'Scientists 1':null, 'Scientists 2':null, 'Scientists 3':null} } //get all scientist names
                     })
                 })
-            </script>
+            </script> --}}
 
 
             </div>
@@ -136,37 +134,9 @@
             
 
 
-        <script>
-            $(document).ready(function() {
-                $("#add_project_button").click(function() {
-                    
-                //const selects = document.querySelector('#userInput5');
-                //let theSelectedOption;
+     
 
-                //select.addEventListener('change', (event) => {
-                    //window.location.href = "inventory/"
-                    //theSelectedOption = event.target.value;
-                //});
-
-                const inputValue1 = $("#userInput1").val();
-                const inputValue2 = $("#userInput2").val();
-                const inputValue3 = $("#userInput3").val();
-                const inputValue4 = $("#userInput4").val();
-                const inputValue5 = $("#userInput5").val();
-
-                module.exports = {inputValue1};
-                module.exports = {inputValue2};
-                module.exports = {inputValue3};
-                module.exports = {inputValue4};
-                module.exports = {inputValue5};
-
-                window.location = "/projects/projectformsubmit";
-                //$(window).attr("location", "inventoryformsubmit/" + inputValue1);
-                });
-            });
-        </script>
-
-        <script>
+        {{!-- <script> 
             function myfunc() {
                 console.log("hello");
             }
@@ -178,29 +148,15 @@
             $('browser-default').formSelect('myfunc');
                 // $('select').formSelect('methodName', paramName);
 
-        </script>
+        </script> --}}
 
-        <script>
+        {{!-- <script>
             $(document).ready(function () {
                 $('.modal').modal();
             })
-        </script>
+        </script> --}}
 
-        <script>
-            $(document).ready(function() {
-                $("#add_project_button").click(function() {
 
-                var inputValue1 = $("#userInputP1").val();
-                var inputValue2 = $("#userInputP2").val();
-                var inputValue3 = $("#userInputP3").val();
-                var inputValue4 = $("#userInputP4").val();
-
-                window.location = "projects/projectformsubmit";
-                });
-            });
-        </script>
-
-        <script src="app.js"></script>
 
     </body>
 
