--- a/views/project_assign.hbs
+++ b/views/project_assign.hbs
@@ -1,145 +1,191 @@
 <!DOCTYPE html>
 <html>
 
-    <head>
-        <title style="color:#e700a2">Project Assign</title>
+<head>
+    <title style="color:#e700a2">Project Assign</title>
 
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-        <link rel="stylesheet" href="/styles/projects.css">
-        <link rel="stylesheet" href="/partials/color.css">
-        <script type="text/javascript" src="/routes/projects.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="/styles/projects.css">
+    <link rel="stylesheet" href="/partials/color.css">
+    <script type="text/javascript" src="/routes/projects.js"></script>
 
-    </head>
+</head>
 
-    <body>
-        <div style="display: flex; justify-content:space-between;">
-            {{> navbar}}
 
-            {{> logout}}
-        </div>
-        <div style="padding: 2% 2% 0% 2%">
 
-            <!-- https://materializecss.com/cards.html -->
+<body>
+    <div style="display: flex; justify-content:space-between;">
+        {{> navbar}}
 
-                    <h1>Project Assign </h1>
+        {{> logout}}
+    </div>
+    <div style="padding: 2% 2% 0% 2%">
 
-            {{#each results}}
-            <div class="row">
-                <div class="col s7 m6 l6">
-                    {{!-- <a href="#terms" class="modal-trigger"> --}}
-                        <div class="card luluble-light-pink darken-1">
-                            <div class="card-content white-text">
-                                {{!-- projects/{{this.project_name}} --}}
-                                <span class="card-title"><a style="color: black;"
-                                        href="/projects/{{project_id}}/trial1/trial1"><b>{{project_name}}</a></b></span>
-                                <p style="color: black;">Client: {{client}}</p>
-                                <p style="color: black;">{{date}}</p>
-                                <div class="col s12">&nbsp;</div>
-                                <div class="row">
-                                    <div class = "col s12 m4 l4">
-                                        <a href="#term{{project_id}}" class="modal-trigger">
-                                            <span class="btn-small luluble-light-grey">See More</span>
-                                        </a>
-                                    </div>
-                                    <div class = "col s10 m4 l7">
-                                        <div class="chips">
-                                            {{!-- <i class="material-icons close">close</i> --}}
-                                        </div>
-                                        </div>
-                                    </div>
+        <!-- https://materializecss.com/cards.html -->
+
+        <h1>Project Assign </h1>
+
+        {{#each results}}
+        <div class="row">
+            <div class="col s7 m6 l6">
+                {{!-- <a href="#terms" class="modal-trigger"> --}}
+                    <div class="card luluble-light-pink darken-1">
+                        <div class="card-content white-text">
+                            {{!-- projects/{{this.project_name}} --}}
+                            <span class="card-title"><a style="color: black;"
+                                    href="/projects/{{project_id}}/trial1/trial1"><b>{{project_name}}</a></b></span>
+                            <p style="color: black;"><b>Client:</b> {{client}}</p>
+                            <p style="color: black;"><b>Date: </b>{{date}}</p>
+                            <p style="color: black;"><b>Scientists: </b>test</p>
+                            <div class="col s12">&nbsp;</div>
+                            <div class="row">
+                                <div class="col s12 m4 l4">
+                                    <a href="#term{{project_id}}" class="modal-trigger">
+                                        <span class="btn-small luluble-light-grey">See More</span>
+                                    </a>
+                                </div>
+                                <div class="col s10 m4 l7">
+                                    <form method="POST">
+                                        <select name="select_assign" id="select_assign" data-project-id="{{project_id}}"
+                                            class="browser-default">
+                                            <option value="0" disabled selected>Assign a Scientist to This Project
+                                            </option>
+                                            {{#each scientist_data}}
+                                            <option value="{{scientist_data.scientist_id}}">{{scientist_data.name}}
+                                            </option>
+                                            {{/each}}
+                                            <option value="Scientist1">Scientist 1</option>
+                                            <option value="Scientist2">Scientist 2</option>
+                                            <option value="Scientist3">Scientist 3</option>
+                                            <option value="Scientist4">Scientist 4</option>
+                                        </select>
+                                    </form>
                                 </div>
                             </div>
                         </div>
-                </div>
-                {{!-- </a> --}}
-            {{/each}}
-            {{#each results}}
-                <div class="modal" id="term{{project_id}}">
-                    <div class="row">
-                        <div class="col s12">&nbsp;</div>
-                        <div class="col s12"><b><font size="+2">{{project_name}}</font></b></div>
-                        <div class="col s12">&nbsp;</div>
-                        <div class="col s6">
-                            <span><b>Client:</b> {{client}}<br></br><b>Date: </b>10/12/2021</span>
-                        </div>
-                        <div class="col s6">
-                            <span><b>Number of Formulas: </b>2<br></br><b>Other: </b>Information</span>
-                        </div>
-                        <div class="col s12">&nbsp;</div>
-                        {{!-- <div class="col s12 m6 l3">
-                            <p></p>
-                        </div>
-                        <div class="col s12 m6 l3">
-                            <p></p>
-                        </div> --}}
-
-                      
                     </div>
+            </div>
+        </div>
+        {{!-- </a> --}}
+        {{/each}}
+        {{#each results}}
+        <div class="modal" id="term{{project_id}}">
+            <div class="row">
+                <div class="col s12">&nbsp;</div>
+                <div class="col s12"><b>
+                        <font size="+2">{{project_name}}</font>
+                    </b></div>
+                <div class="col s12">&nbsp;</div>
+                <div class="col s6">
+                    <span><b>Client:</b> {{client}}<br></br><b>Date: </b>10/12/2021</span>
                 </div>
-            </div>
-            
-            <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-            
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
-            
-            <script>
-                $(document).ready(function () {
-                    $('.modal').modal();
-                })
-            </script>
-
-            <div class="card-action"></div>
-
-            {{/each}}
-
-            <script>
-                $(document).ready(function() {
-                    $("#update_button").click(function() {
-
-                    const inputValueU1 = $("#userInputU1").val();
-                    const inputValueU2 = $("#userInputU2").val();
-                    const inputValueU3 = $("#userInputU3").val();
-
-                    window.location += "projectupdate";
-                    //$(window).attr("location", "inventoryformsubmit/" + inputValue1);
-                    });
-                });
-            </script>
-
-            <script>
-                document.addEventListener('DOMContentLoaded', function(){
-                    var mychips=document.querySelectorAll('.chips');
-                    {{#each scientists}}
-                    M.Chips.init(mychips,{
-                        data:[{tag:'Scientist 4'}, {tag: scientists}],
-                        placeholder: 'Assign Scientists',
-                        secondaryPlaceholder: '+Scientist',
-                        autocompleteOptions:{data:{'Scientists 1':null, 'Scientists 2':null, 'Scientists 3':null} } //get all scientist names
-                    })
-                    {{/each}}
-                })
-            </script>
+                <div class="col s6">
+                    <span><b>Number of Formulas: </b>2<br></br><b>Other: </b>Information</span>
+                </div>
+                <div class="col s12">&nbsp;</div>
+                {{!-- <div class="col s12 m6 l3">
+                    <p></p>
+                </div>
+                <div class="col s12 m6 l3">
+                    <p></p>
+                </div> --}}
 
 
             </div>
-            {{!-- <a href="/created" class="btn-floating btn-large orange fixed-action-btn">
-                <i class="large material-icons">create</i>
-            </a> --}}
+        </div>
+    </div>
 
-            
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
+
+    <script>
+        $(document).ready(function () {
+            $('.modal').modal();
+        })
+    </script>
+
+    <div class="card-action"></div>
+
+    {{/each}}
+
+    <script>
+        const select = document.querySelector('#select_assign');
+        const projectId = select.dataset.projectId;
+        let selectedOption;
 
 
-        <script>
-            $(document).ready(function() {
-                $("#add_project_button").click(function() {
-                    
+        select.addEventListener('change', (event) => {
+            //window.location.href = "inventory/"
+            selectedOption = event.target.value;
+            console.log(selectedOption);
+            //window.location.assign("/inventory");
+            //window.location.href += "/" + selectedOption;
+            var l = "/project-assign/" + projectId + "/assignscientist";
+            if (window.location.href.indexOf(l) !== -1) {
+                //window.location.href = "/proejct-assign/assignscientist/" + selectedOption;
+                window.location.href = l;
+                //window.location.href = selectedOption;
+            }
+            else {
+                //window.location.href = "/project-assign/assignscientist/" + selectedOption;
+                window.location.href = l;
+            }
+            //history.replaceState(null, null, 'http://localhost:3000/inventory');
+        });
+        header.innerHTML = "Inventory - " + selectedOption;
+    </script>
+
+    <script>
+        $(document).ready(function () {
+            $("#update_button").click(function () {
+
+                const inputValueU1 = $("#userInputU1").val();
+                const inputValueU2 = $("#userInputU2").val();
+                const inputValueU3 = $("#userInputU3").val();
+
+                window.location += "projectupdate";
+                //$(window).attr("location", "inventoryformsubmit/" + inputValue1);
+            });
+        });
+    </script>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            var mychips = document.querySelectorAll('.chips');
+            { { #each scientists } }
+            M.Chips.init(mychips, {
+                data: [{ tag: 'Scientist 4' }, { tag: scientists }],
+                placeholder: 'Assign Scientists',
+                secondaryPlaceholder: '+Scientist',
+                autocompleteOptions: { data: { 'Scientists 1': null, 'Scientists 2': null, 'Scientists 3': null } } //get all scientist names
+            })
+            {
+                {
+                    /each}}
+                })
+    </script>
+
+
+    </div>
+    {{!-- <a href="/created" class="btn-floating btn-large orange fixed-action-btn">
+        <i class="large material-icons">create</i>
+    </a> --}}
+
+
+
+
+    <script>
+        $(document).ready(function () {
+            $("#add_project_button").click(function () {
+
                 //const selects = document.querySelector('#userInput5');
                 //let theSelectedOption;
 
                 //select.addEventListener('change', (event) => {
-                    //window.location.href = "inventory/"
-                    //theSelectedOption = event.target.value;
+                //window.location.href = "inventory/"
+                //theSelectedOption = event.target.value;
                 //});
 
                 const inputValue1 = $("#userInput1").val();
@@ -148,41 +194,41 @@
                 const inputValue4 = $("#userInput4").val();
                 const inputValue5 = $("#userInput5").val();
 
-                module.exports = {inputValue1};
-                module.exports = {inputValue2};
-                module.exports = {inputValue3};
-                module.exports = {inputValue4};
-                module.exports = {inputValue5};
+                module.exports = { inputValue1 };
+                module.exports = { inputValue2 };
+                module.exports = { inputValue3 };
+                module.exports = { inputValue4 };
+                module.exports = { inputValue5 };
 
                 window.location = "/projects/projectformsubmit";
                 //$(window).attr("location", "inventoryformsubmit/" + inputValue1);
-                });
             });
-        </script>
+        });
+    </script>
 
-        <script>
-            function myfunc() {
-                console.log("hello");
-            }
-            $(document).ready(function () {
-                $('browser-default').formSelect();
-                $('.modal').modal();
-            });
+    <script>
+        function myfunc() {
+            console.log("hello");
+        }
+        $(document).ready(function () {
+            $('browser-default').formSelect();
+            $('.modal').modal();
+        });
 
-            $('browser-default').formSelect('myfunc');
+        $('browser-default').formSelect('myfunc');
                 // $('select').formSelect('methodName', paramName);
 
-        </script>
+    </script>
 
-        <script>
-            $(document).ready(function () {
-                $('.modal').modal();
-            })
-        </script>
+    <script>
+        $(document).ready(function () {
+            $('.modal').modal();
+        })
+    </script>
 
-        <script>
-            $(document).ready(function() {
-                $("#add_project_button").click(function() {
+    <script>
+        $(document).ready(function () {
+            $("#add_project_button").click(function () {
 
                 var inputValue1 = $("#userInputP1").val();
                 var inputValue2 = $("#userInputP2").val();
@@ -190,13 +236,13 @@
                 var inputValue4 = $("#userInputP4").val();
 
                 window.location = "projects/projectformsubmit";
-                });
             });
-        </script>
+        });
+    </script>
 
-        <script src="app.js"></script>
+    <script src="app.js"></script>
 
-    </body>
+</body>
 
 </html>
 
